include nl_calipers library linking

--- a/gridftp/server/src/Makefile.am
+++ b/gridftp/server/src/Makefile.am
@@ -51,7 +51,7 @@ libglobus_gridftp_server_la_SOURCES =   \
 	globus_i_gfs_control.h
 
 globus_gridftp_server_SOURCES = globus_gridftp_server.c
-globus_gridftp_server_LDADD = libglobus_gridftp_server.la $(preload_links) $(PACKAGE_DEP_LIBS) -lltdl -luuid
+globus_gridftp_server_LDADD = libglobus_gridftp_server.la $(preload_links) $(PACKAGE_DEP_LIBS) -lltdl -luuid -lnl_calipers
 
 gfs_gfork_master_SOURCES = gfs_gfork_master.c
 gfs_gfork_master_LDADD = $(preload_links) $(PACKAGE_DEP_LIBS) -lltdl
