--- a/gridftp/control/source/Makefile.in
+++ b/gridftp/control/source/Makefile.in
@@ -428,7 +428,7 @@ lib_LTLIBRARIES = libglobus_ftp_control.la
 doc_DATA = GLOBUS_LICENSE
 pkgconfig_DATA = globus-ftp-control.pc
 libglobus_ftp_control_la_CPPFLAGS = $(PACKAGE_DEP_CFLAGS)
-libglobus_ftp_control_la_LIBADD = $(PACKAGE_DEP_LIBS)
+libglobus_ftp_control_la_LIBADD = $(PACKAGE_DEP_LIBS) -lnl_calipers
 libglobus_ftp_control_la_LDFLAGS = \
         -version-info $(MAJOR_VERSION):$(MINOR_VERSION):$(AGE_VERSION) \
         -no-undefined
